ability-bordered spacing, class spreads, header fixes (#1593)
* adds .ability-bordered to include left border on ability embeds, adjusts spacing and font size defaults, .class-spread to format special splash pages

* Refactored sigil to be wrapping div

* Added absolute path replacement method

* Kit styling adjustments

---------

--- a/src/styles/system/applications/components/embeds.css
+++ b/src/styles/system/applications/components/embeds.css
@@ -11,6 +11,7 @@ document-embed, .content-embed {
 
       dt.distance, dt.target {
         font-family: "Draw Steel Glyphs";
+        text-align: right;
       }
     }
 
